feat(): notifications, configuration update

--- a/heating/templates/confirmation.html
+++ b/heating/templates/confirmation.html
@@ -11,7 +11,7 @@
     <tbody>
     <tr>
         <td>Back to status...</td>
-        <td><a href="http://{{.IpPort}}/status" class="button">Click Here</a></td>
+        <td><a href="http://{{.IpPort}}/heating/status" class="button">Click Here</a></td>
     </tr>
     </tbody>
 </table>
