--- a/heating/templates/status.html
+++ b/heating/templates/status.html
@@ -44,43 +44,43 @@
     <tbody>
     <tr>
         <td>Reset - Back to Normal</td>
-        <td><a class="button" href="http://{{.IpPort}}/temporary/reset">Click Here</a></td>
+        <td><a class="button" href="http://{{.IpPort}}/heating/temporary/reset">Click Here</a></td>
     </tr>
     <tr>
         <td>High - 3 hours</td>
-        <td><a class="button" href="http://{{.IpPort}}/temporary/high/3">Click Here</a></td>
+        <td><a class="button" href="http://{{.IpPort}}/heating/temporary/high/3">Click Here</a></td>
     </tr>
     <tr>
         <td>High - 6 hours</td>
-        <td><a class="button" href="http://{{.IpPort}}/temporary/high/6">Click Here</a></td>
+        <td><a class="button" href="http://{{.IpPort}}/heating/temporary/high/6">Click Here</a></td>
     </tr>
     <tr>
         <td>High - 12 hours</td>
-        <td><a class="button" href="http://{{.IpPort}}/temporary/high/12">Click Here</a></td>
+        <td><a class="button" href="http://{{.IpPort}}/heating/temporary/high/12">Click Here</a></td>
     </tr>
     <tr>
         <td>Low - 3 hours</td>
-        <td><a class="button" href="http://{{.IpPort}}/temporary/low/3">Click Here</a></td>
+        <td><a class="button" href="http://{{.IpPort}}/heating/temporary/low/3">Click Here</a></td>
     </tr>
     <tr>
         <td>Low - 6 hours</td>
-        <td><a class="button" href="http://{{.IpPort}}/temporary/low/6">Click Here</a></td>
+        <td><a class="button" href="http://{{.IpPort}}/heating/temporary/low/6">Click Here</a></td>
     </tr>
     <tr>
         <td>Low - 12 hours</td>
-        <td><a class="button" href="http://{{.IpPort}}/temporary/low/12">Click Here</a></td>
+        <td><a class="button" href="http://{{.IpPort}}/heating/temporary/low/12">Click Here</a></td>
     </tr>
     <tr>
         <td>Max - 3 hours</td>
-        <td><a class="button" href="http://{{.IpPort}}/temporary/max/3">Click Here</a></td>
+        <td><a class="button" href="http://{{.IpPort}}/heating/temporary/max/3">Click Here</a></td>
     </tr>
     <tr>
         <td>Max - 6 hours</td>
-        <td><a class="button" href="http://{{.IpPort}}/temporary/max/6">Click Here</a></td>
+        <td><a class="button" href="http://{{.IpPort}}/heating/temporary/max/6">Click Here</a></td>
     </tr>
     <tr>
         <td>Max - 12 hours</td>
-        <td><a class="button" href="http://{{.IpPort}}/temporary/max/12">Click Here</a></td>
+        <td><a class="button" href="http://{{.IpPort}}/heating/temporary/max/12">Click Here</a></td>
     </tr>
     </tbody>
 </table>
