--- a/heating/templates/status.html
+++ b/heating/templates/status.html
@@ -2,133 +2,176 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" media="all">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" media="all">
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <script src="/js/set.js"></script>
-<link href="/css/status.css" rel="stylesheet" type="text/css"  media="all">
+<link href="/css/status.css" rel="stylesheet" type="text/css" media="all">
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width">
     <meta charset="UTF-8">
-    <title>Heating Status</title>
+    <title>Domotique</title>
 </head>
 <body>
-<h1 style="color: #5e9ca0;">Heating Settings</h1>
-<input type="hidden" name="ipPort" id="ipPort" value="{{.IpPort}}"/>
-<p>{{if .IsTemporary}}</p>
-<h2 style="color: red;">Temporary Settings:</h2>
-<table>
-    <tbody>
-    <tr>
-        <td>Temporary settings until</td>
-        <td>{{.Until}}</td>
-    </tr>
-    <tr>
-        <td>Temporary settings level</td>
-        <td>{{.TemporaryLevel}}</td>
-    </tr>
-    </tbody>
-</table>
-<p>{{end}}</p>
-<h2 style="color: #2e6c80;">Actual Settings:</h2>
-<table>
-    <tbody>
-    <tr>
-        <td>Heater level</td>
-        <td>{{.Heater_Level}}</td>
-    </tr>
-    <tr>
-        <td>Heater Requested temperature</td>
-        <td>{{.Temperature_Requested}} &deg;C</td>
-    </tr>
-    <tr>
-        <td>House temperature</td>
-        <td>{{.Temperature_Actual}} &deg;C</td>
-    </tr>
-    </tbody>
-</table>
-<h2 style="color: #2e6c80;">Temporarily force settings:</h2>
-<table>
-    <tbody>
-    <tr>
-        <td>
-            <form>
-                <label for="day">Day</label>
-                <input type="text" name="day" id="day" value=""/>
-                <label for="hour">Hour</label>
-                <input type="text" name="hour" id="hour" value=""/>
-                <button id="clickHigh" type="button" onclick="setTemporary('high');" href="#">High</button>
-                <button id="clickLow" type="button" onclick="setTemporary('low');" href="#">Low</button>
-                <button id="clickMax" type="button" onclick="setTemporary('max');" href="#">Max</button>
-                <button id="clickAway" type="button" onclick="setTemporary('away');" href="#">Away</button>
-                <button id="clickReset" type="button" onclick="setTemporary('reset');" href="#">Reset</button>
-            </form>
-        </td>
-    </tr>
-    </tbody>
-</table>
-<h2 style="color: #2e6c80;">Summary Normal Configuration:</h2>
-<table>
-    <tbody>
-    <tr>
-        <th>Day</th>
-        <th>Moment</th>
-        <th>Level</th>
-        <th>Value</th>
-    </tr>
-    {{with .NormalValues}}
-    {{range .}}
-    <tr>
-        <td>{{.Day}}</td>
-        <td align="right">{{.Moment}}</td>
-        <td>{{.LevelName}}</td>
-        <td>{{.LevelValue}}</td>
-    </tr>
-    </tbody>
-    {{end}}
-    {{end}}
-</table>
-<h2 style="color: #2e6c80;">Last Update:</h2>
-<table>
-    <tbody>
-    <tr>
-        <td>Date &amp; Time</td>
-        <td>{{.UpdateTime}}</td>
-    </tr>
-    </tbody>
-</table>
-<table>
-    <tbody>
-    <tr>
-        <th>Room</th>
-        <th>Description</th>
-        <th>Type</th>
-        <th>On</th>
-        <th>Off</th>
-        <th>Power</th>
-    </tr>
-    {{with .Devices}}
-        {{range .}}
+<h1>Domotique</h1>
+
+<div class="demo-card-wide mdl-card mdl-shadow--2dp">
+    <div class="mdl-card__title">
+        <h2 class="mdl-card__title-text">Actual Settings:</h2>
+    </div>
+
+    <input type="hidden" name="ipPort" id="ipPort" value="{{.IpPort}}"/>
+    <p>{{if .IsTemporary}}</p>
+
+    <table>
+        <tbody>
+        <tr>
+            <td colspan="2">
+                Temporary heating Settings
+            </td>
+        </tr>
+        <tr>
+            <td>Temporary settings until</td>
+            <td>{{.Until}}</td>
+        </tr>
+        <tr>
+            <td>Temporary settings level</td>
+            <td>{{.TemporaryLevel}}</td>
+        </tr>
+        </tbody>
+    </table>
+    <p>{{end}}</p>
+
+    <table class="mdl-data-table mdl-js-data-table">
+        <thead>
+        <tr>
+            <th class="mdl-data-table__cell--non-numeric wrap">Heater level</th>
+            <th class="mdl-data-table__cell--non-numeric wrap">Heater Requested temperature</th>
+            <th class="mdl-data-table__cell--non-numeric wrap">House temperature</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            {{if .IsHeating}}
+            <td class="centerText red"><span class="material-icons">local_fire_department</span></td>
+            <td class="centerText red">{{.Temperature_Requested}} &deg;C</td>
+            <td class="centerText red">{{.Temperature_Actual}} &deg;C</td>
+
+            {{ else }}
+            <td class="centerText green"><span class="material-icons">check_circle_outline</span></td>
+            <td class="centerText green">{{.Temperature_Requested}} &deg;C</td>
+            <td class="centerText green">{{.Temperature_Actual}} &deg;C</td>
+            {{end}}
+
+        </tr>
+        </tbody>
+    </table>
+
+</div>
+
+<div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
+
+    <div class="mdl-tabs__tab-bar">
+        <a href="#Controls" class="mdl-tabs__tab is-active">Controls</a>
+        <a href="#Heating" class="mdl-tabs__tab">Heating</a>
+        <a href="#Logs" class="mdl-tabs__tab">Logs</a>
+    </div>
+
+    <div class="mdl-tabs__panel" id="Heating">
+        <h2 style="color: #2e6c80;">Temporarily force settings:</h2>
+        <table>
+            <tbody>
+            <tr>
+                <td>
+                    <form>
+                        <label for="day">Day</label>
+                        <input type="text" name="day" id="day" value=""/>
+                        <label for="hour">Hour</label>
+                        <input type="text" name="hour" id="hour" value=""/>
+                        <button id="clickHigh" type="button" onclick="setTemporary('high');" href="#">High</button>
+                        <button id="clickLow" type="button" onclick="setTemporary('low');" href="#">Low</button>
+                        <button id="clickMax" type="button" onclick="setTemporary('max');" href="#">Max</button>
+                        <button id="clickAway" type="button" onclick="setTemporary('away');" href="#">Away</button>
+                        <button id="clickReset" type="button" onclick="setTemporary('reset');" href="#">Reset</button>
+                    </form>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <h2 style="color: #2e6c80;">Summary Normal Configuration:</h2>
+        <table>
+            <tbody>
+            <tr>
+                <th>Day</th>
+                <th>Moment</th>
+                <th>Level</th>
+                <th>Value</th>
+            </tr>
+            {{with .NormalValues}}
+            {{range .}}
+            <tr>
+                <td>{{.Day}}</td>
+                <td align="right">{{.Moment}}</td>
+                <td>{{.LevelName}}</td>
+                <td>{{.LevelValue}}</td>
+            </tr>
+            </tbody>
+            {{end}}
+            {{end}}
+        </table>
+    </div>
+    <div class="mdl-tabs__panel" id="Logs">
+        <h2 style="color: #2e6c80;">Last Update:</h2>
+        <table>
+            <tbody>
+            <tr>
+                <td>Date &amp; Time</td>
+                <td>{{.UpdateTime}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="mdl-tabs__panel is-active" id="Controls">
+        <table class="mdl-data-table mdl-js-data-table">
+            <thead>
+            <tr>
+                <th class="mdl-data-table__cell--non-numeric">Room</th>
+                <th class="mdl-data-table__cell--non-numeric">Description</th>
+                <th class="mdl-data-table__cell--non-numeric">Type</th>
+                <th class="mdl-data-table__cell--non-numeric">On</th>
+                <th class="mdl-data-table__cell--non-numeric">Off</th>
+                <th>Power</th>
+            </tr>
+            </thead>
+            <tbody>
+
+            {{with .Devices}}
+            {{range .}}
             {{if eq .Type "Prise"}}
             <tr>
-                <td>{{.Room}}</td>
-                <td>{{.Name}}</td>
-                <td>{{.Type}}</td>
+                <td class="leftText">{{.Room}}</td>
+                <td class="leftText">{{.Name}}</td>
+                <td class="leftText">{{.Type}}</td>
                 <td>
-                    <button class="{{.StatusOn}}" onclick="toggleDevice({{.DomotiqueId}}, {{.UrlOn}})">On</button>
+                    <button class="{{.StatusOn}} mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
+                            onclick="toggleDevice({{.DomotiqueId}}, {{.UrlOn}})">On
+                    </button>
                 </td>
                 <td>
-                    <button class="{{.StatusOff}}" onclick="toggleDevice({{.DomotiqueId}}, {{.UrlOff}})">Off</button>
+                    <button class="{{.StatusOff}} mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
+                            onclick="toggleDevice({{.DomotiqueId}}, {{.UrlOff}})">Off
+                    </button>
                 </td>
                 <td>
                     {{.Power}}
                 </td>
             </tr>
-                {{end}}
-        {{end}}
-    {{end}}
-    </tbody>
-</table>
-
+            {{end}}
+            {{end}}
+            {{end}}
+            </tbody>
+        </table>
+    </div>
+</div>
 </body>
 <footer>
     <div id="demo-snackbar-example" class="mdl-js-snackbar mdl-snackbar">
