--- a/heating/templates/status.html
+++ b/heating/templates/status.html
@@ -77,6 +77,46 @@
     </div>
 
     <div class="mdl-tabs__panel" id="Heating">
+        <table class="mdl-data-table mdl-js-data-table">
+            <thead>
+            <tr>
+                <th class="mdl-data-table__cell--non-numeric">Room</th>
+                <th class="mdl-data-table__cell--non-numeric">Description</th>
+                <th class="mdl-data-table__cell--non-numeric">Type</th>
+                <th class="mdl-data-table__cell--non-numeric">On</th>
+                <th class="mdl-data-table__cell--non-numeric">Off</th>
+                <th>Power</th>
+            </tr>
+            </thead>
+            <tbody>
+            {{with .Devices}}
+            {{range .}}
+            {{if eq .Type "Climat"}}
+            <tr>
+                <td class="leftText">{{.Room}}</td>
+                <td class="leftText">{{.Name}}</td>
+                <td class="leftText">{{.Type}}</td>
+                <td>
+                    <button class="{{.StatusOn}} mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
+                            onclick="toggleDevice({{.DomotiqueId}}, {{.UrlOn}})">On
+                    </button>
+                </td>
+                <td>
+                    <button class="{{.StatusOff}} mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
+                            onclick="toggleDevice({{.DomotiqueId}}, {{.UrlOff}})">Off
+                    </button>
+                </td>
+                <td>
+                    {{.Power}}
+                </td>
+            </tr>
+            {{end}}
+            {{end}}
+            {{end}}
+            </tbody>
+        </table>
+
+
         <h2 style="color: #2e6c80;">Temporarily force settings:</h2>
         <table>
             <tbody>
@@ -170,7 +210,8 @@
                 </td>
                 <td>
                     <input class="mdl-slider mdl-js-slider" type="range" id="slider{{.DomotiqueId}}"
-                           min="0" max="100" value="{{.CurrentPos}}" tabindex="0" onchange="slideDevice({{.DomotiqueId}}, {{.UrlSlide}})">
+                           min="0" max="100" value="{{.CurrentPos}}" tabindex="0"
+                           onchange="slideDevice({{.DomotiqueId}}, {{.UrlSlide}})">
                 </td>
                 <td> {{.CurrentPos}}
                 </td>
