[UP][UI] button to force reconnection to mqtt server

--- a/heating/templates/status.html
+++ b/heating/templates/status.html
@@ -405,6 +405,14 @@
                 <td>Date &amp; Time</td>
                 <td>{{.UpdateTime}}</td>
             </tr>
+            <tr>
+                <td>Reconnect</td>
+                <td>
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
+                        onclick="runReconnect();">Execute
+                </button>
+                </td>
+            </tr>
             </tbody>
         </table>
     </div>
